Closed Bug 1235410 Opened 8 years ago Closed 8 years ago

Centralize StmtType enumeration in a higher-order macro so types/string descriptions can't go out of sync

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: Waldo, Assigned: Waldo)

Details

Attachments

(1 file)

These actually *are* out of sync now, but only in one place, and this being used only for X-too-large error messages it doesn't seem worth testing.
Attached patch PatchSplinter Review
Attachment #8702319 - Flags: review?(arai.unmht)
Comment on attachment 8702319 [details] [diff] [review]
Patch

Review of attachment 8702319 [details] [diff] [review]:
-----------------------------------------------------------------

cool! :D
Attachment #8702319 - Flags: review?(arai.unmht) → review+
https://hg.mozilla.org/mozilla-central/rev/40e6314fcce2
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: