Bug 1235410 - Centralize StmtType enumeration in a higher-order macro, so as not to have types and string descriptions of them go out of sync.  As they happen to be now.  ಠ_ಠ  r=arai