js/src/frontend/SharedContext.h
@@ -458,34 +458,33 @@ SharedContext::allLocalsAliased()
     return bindingsAccessedDynamically() || (isFunctionBox() && asFunctionBox()->isGenerator());
 }
 
+// NOTE: If you add a new type of statement that is a scope, add it between
+//       WITH and CATCH, or you'll break StmtInfoBase::linksScope.  If you add
+//       a non-looping statement type, add it before DO_LOOP or you'll break
+//       StmtInfoBase::isLoop().
+#define FOR_EACH_STATEMENT_TYPE(macro) \
+    macro(LABEL, "label statement") \
+    macro(IF, "if statement") \
+    macro(ELSE, "else statement") \
+    macro(SEQ, "destructuring body") \
+    macro(BLOCK, "block") \
+    macro(SWITCH, "switch statement") \
+    macro(WITH, "with statement") \
+    macro(CATCH, "catch block") \
+    macro(TRY, "try block") \
+    macro(FINALLY, "finally block") \
+    macro(SUBROUTINE, "finally block") \
+    macro(DO_LOOP, "do loop") \
+    macro(FOR_LOOP, "for loop") \
+    macro(FOR_IN_LOOP, "for/in loop") \
+    macro(FOR_OF_LOOP, "for/of loop") \
+    macro(WHILE_LOOP, "while loop") \
+    macro(SPREAD, "spread")
 
-/*
- * NB: If you add a new type of statement that is a scope, add it between
- * STMT_WITH and STMT_CATCH, or you will break StmtInfoBase::linksScope. If you
- * add a non-looping statement type, add it before STMT_DO_LOOP or you will
- * break StmtInfoBase::isLoop().
- *
- * Also remember to keep the statementName array in BytecodeEmitter.cpp in
- * sync.
- */
 enum class StmtType : uint16_t {
-    LABEL,                 /* labeled statement:  L: s */
-    IF,                    /* if (then) statement */
-    ELSE,                  /* else clause of if statement */
-    SEQ,                   /* synthetic sequence of statements */
-    BLOCK,                 /* compound statement: { s1[;... sN] } */
-    SWITCH,                /* switch statement */
-    WITH,                  /* with statement */
-    CATCH,                 /* catch block */
-    TRY,                   /* try block */
-    FINALLY,               /* finally block */
-    SUBROUTINE,            /* gosub-target subroutine body */
-    DO_LOOP,               /* do/while loop statement */
-    FOR_LOOP,              /* for loop statement */
-    FOR_IN_LOOP,           /* for/in loop statement */
-    FOR_OF_LOOP,           /* for/of loop statement */
-    WHILE_LOOP,            /* while loop statement */
-    SPREAD,                /* spread operator (pseudo for/of) */
+#define DECLARE_STMTTYPE_ENUM(name, desc) name,
+    FOR_EACH_STATEMENT_TYPE(DECLARE_STMTTYPE_ENUM)
+#undef DECLARE_STMTTYPE_ENUM
     LIMIT
 };
 
